# prompt_injection_security_system

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  advanced_demo.py  demo.py  failures_production.json  pyproject.toml
.github/workflows/: ci.yml
Shopify_showcase/: ROADMAP.md  SECURITY_SYSTEM.md  SHOWCASE.md
Shopify_showcase/examples/: demo.py  security_validation_demo.py
cross_language_integrations/: README.md
cross_language_integrations/docs/cross-language-integration/: GO_INTEGRATION.md
cross_language_integrations/go-integration/: README.md  advanced_demo.go  demo.go  go.mod  guard-config-enhanced.json  guard-config.json  regex_patterns.json
cross_language_integrations/python/: export_adapter.py  export_adapter_enhanced.py
cross_language_integrations/ts-integration/: README.md  enhanced-guard.ts  guard.go  package-lock.json  package.json
cross_language_integrations/ts-integration/src/: guard.ts
deployment/: .dockerignore  .env.example  ARCHITECTURE.md  Dockerfile  Dockerfile.test  Makefile  QUICKSTART.md  README.md  client.py  docker-compose.prod.yml  docker-compose.yml  middle_ware.py  nginx.conf  test_deployment.py
docs/: ARCHITECTURE.md  CLEANUP_PLAN.md  CONTRIBUTING.md  GEPA_TRAINING_GUIDE.md  OBSERVABILITY.md  QUICKSTART.md  README.md  ROADMAP_UPDATE_2024.md  SECURITY.md  chain_of_trust.md
docs/cross-language-integration/: README.md  TYPESCRIPT_INTEGRATION.md
docs/latency_improvements/: LATENCY_OPTIMIZATION_REPORT.md
examples/: README.md  advanced_demo.py  demo.py  enhanced_demo.py  failures_production.json  ml_demo.py  output_guard.py  performance_demo.py  security_demo.py  security_validation_demo.py  trust_enhanced_demo.py
examples/production_scripts/: advanced.py  deploy.py  main.py
examples/results/: security_validation_20251215_020439.json  security_validation_20251215_030556.json  security_validation_20251215_042611.json  security_validation_20251215_042753.json  security_validation_20251215_044537.json
optimizer/: README.md  train_gepa.py
production/: README.md  advanced.py  api.py  deploy.py  export_adapter.py  main.py
results/: security_test_results_20251210_152825.json  security_test_results_20251210_152920.json  security_test_results_20251212_171627.json  security_validation_20251215_013928.json  security_validation_20251215_015352.json
scripts/: README_optimization.md  cleanup_docs.sh  optimize_detector.py  setup_training_environment.sh  train_embedding_classifier.py
src/trust/: README.md  __init__.py  trust.py
src/trust/api/: __init__.py  api.py  app.py  observable_api.py  secure_api.py
src/trust/core/: __init__.py  config.py  detector.py  metric.py  regex_baseline.py  threat_types.py
src/trust/guards/: __init__.py  input_guard.py  output_guard.py  primitives.py  prompt_builder.py  prompt_cache.py  security_policy.py  trusted_layer.py
src/trust/observability/: __init__.py  metrics.py  middleware.py  tracing.py
src/trust/optimizer/: train_gepa.py  utility.py
src/trust/owasp/: README.md  __init__.py  main.py  owasp.md
src/trust/pipeline/: __init__.py  adaptive_pipeline.py  validator_registry.py
src/trust/production/: __init__.py
system_prompt/: README.md  system_prompt.json
tests/: README.md  test_adaptive_pipeline.py  test_enhanced_detector.py  test_fusion.py  test_integration.py  test_latency.py  test_latency_optimization.py  test_ml_integration.py  test_performance_optimizations.py  test_regex_baseline.py  test_security.py  test_validators.py  test_validators_simple.py
tests/guards/: test_output_guard.py  test_primitives.py  test_prompt_builder.py  test_prompt_cache.py  test_security_policy.py  test_self_learning_shield.py  test_trust_wrapper.py  test_trusted_layer.py
tests/prompt_attacks/: advanced_examples.json  prompt_injections.json
threat_detector_optimized/: README.md
threat_detector_optimized/v1/: metadata.json  program.json
threat_detector_optimized/v2/: metadata.json  program.json
threat_system/: README.md  config.py  metric.py  regex_baseline.py  regex_patterns.json  threat_detector.py
threat_types/: utility.py
ts-integration/: README.md  advanced_demo.ts  demo.ts  guard-config.json  tsconfig.json
ts-integration/src/: guard.ts
(+43 files in other folders)
